tests/fail/invalid_id_number.tig
let
    var 1abc := "This is an invalid id for var declaration"
in
end
